Make changes into the top - up button to avoid overlap with the footer and make css changes in the contact page

--- a/css/Contact.css
+++ b/css/Contact.css
@@ -29,16 +29,16 @@ body{
 
 .contact-info{
     display: flex;
-    width: 100%;
+    width: 90%;
 }
 .form-input{
     padding: 10px;
-    width: 50%;
+    width: 90%;
 }
 
 .personal-info{
     padding: 20px;
-    width: 50%;
+    width: 80%;
 
 }
 
@@ -48,7 +48,7 @@ form{
     margin-left: auto;
     margin-right: auto;
     text-align: left;
-    width: 80%;
+    width: 90%;
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -77,7 +77,7 @@ textarea{
     background-color: #fffaee;
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.5);
     padding: 30px;
-    width: 90%;
+    width: 100%;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
@@ -103,6 +103,10 @@ textarea{
     .form-input{
         height: 100%;
         width: 100%;
+    }
+
+    .subdetails p {
+        font-size: 14px;
     }
 
     form{
